Fixing the overflow problem in the front page

--- a/react-app/src/components/Student.css
+++ b/react-app/src/components/Student.css
@@ -17,7 +17,8 @@
 
   .Student-nav-bar{
     height:70px;
-    background: #47F84E;
+    color:white;
+    background: #011528;
 
   }
 
