--- a/react-app/src/components/StudentHome.css
+++ b/react-app/src/components/StudentHome.css
@@ -19,6 +19,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    overflow-x:hidden;
+    overflow-y: auto;
+    overflow-inline: 5px;
 }
 
 .StudentHomeBox-left-upper {
@@ -59,3 +63,43 @@
 }
 
 
+#searchBar{
+
+    height: 5vh;
+    width: 93.7%;
+    margin-left:5px;
+    padding-left:5px;
+    float: left;
+    border-radius:10px;
+    border-width: 3px;
+    border-style: solid;
+    font-size: 3vh;
+    font-family: frank ruhal ribre;
+    
+}
+
+.StudentHomeBox-right::-webkit-scrollbar {
+    width: 20px;
+    border-radius: 10px;
+    border-width: 5px;
+  }
+  
+
+.StudentHomeBox-right::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+
+.StudentHomeBox-right::-webkit-scrollbar-thumb {
+    background: #888; 
+     border-radius: 5px
+  }
+  
+ 
+.StudentHomeBox-right::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+.StudentHomeBox-right::-webkit-scrollbar-track {
+
+    border-radius: 5px;
+
+  } 
